--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -2,22 +2,30 @@
   pointer-events: none;
 }
 
-.section {
+.landingContainer {
   width: 100%;
   height: 100%;
   position: relative;
   z-index: 100;
 }
 
-.blur {
-  filter: 'contrast(88%) brightness(72%)';
+.stackContainer {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  width: auto;
+  justify-content: center;
 }
 
-.button {
-  color: 'rgb(255, 255, 255)';
-  justify-content: 'center';
-  align-items: 'center';
-  margin-top: '0 !important';
-  height: '10%';
-  width: '15%';
+.btnStyle {
+  justify-content: center;
+  align-items: center;
+  margin-top: 0 !important;
+  height: 10%;
+  width: 20%;
+  padding: 1rem;
+}
+
+.blur {
+  filter: contrast(88%) brightness(72%);
 }
