--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -13,7 +13,7 @@
   position: absolute;
   top: 50%;
   left: 5%;
-  width: auto;
+  width: min-content;
   justify-content: center;
 }
 
@@ -24,6 +24,7 @@
   height: 10%;
   width: 20%;
   padding: 1rem;
+  width: max-content !important;
 }
 
 .blur {
