--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -32,3 +32,14 @@
 .blur {
   filter: contrast(88%) brightness(72%);
 }
+
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 1;
+  overflow: hidden;
+  background: linear-gradient(0deg, #181818, transparent 50%)
+}
