fix landing css for a better ux view

--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -1,5 +1,7 @@
 .blockClick {
   pointer-events: none;
+  width: 100% !important;
+  height: 72% !important;
 }
 
 .landingContainer {
@@ -39,7 +41,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 72% !important;
   opacity: 1;
   overflow: hidden;
   background: linear-gradient(0deg, #181818, transparent 50%)
