--- a/src/Components/Modals/modal.module.css
+++ b/src/Components/Modals/modal.module.css
@@ -17,3 +17,8 @@
   overflow: hidden;
   background: linear-gradient(0deg, #181818, transparent 50%);
 }
+.modalContainer {
+  padding: 10px 10px 20px 20px;
+  align-items: center;
+  gap: 4px;
+}
