--- a/src/Components/Cards/MovieCard.module.css
+++ b/src/Components/Cards/MovieCard.module.css
@@ -8,29 +8,19 @@
   ml: 2,
   mr: 2,
   mt: 5,
-}
+} */
 
+/* .image {
+  float: left;
+  object-fit: 'cover';
+  width: '100%';
+  height: '100%';
 
-const Blur = {
-  filter:'blur(2px) contrast(75%) brightness(50%)',
-  transform:'scale(1.1)',
-  transition:'all 0.3s ease-in-out',
-  zIndex: '-1',
-}
-
-const unBlur = {
-  filter:'blur(0px) contrast(1)',
-  transform:'scale(1)',
-  transition:'all 0.3s ease-in-out',
-  zIndex: '-1',
 } */
 
 .boxSettings {
   position: relative;
   cursor: pointer;
-  width: max-content;
   border-style: none;
-  margin-left: 4px;
-  margin-right: 4px;
   margin-top: 10px;
 }
