--- a/src/Components/Modals/modal.module.css
+++ b/src/Components/Modals/modal.module.css
@@ -25,10 +25,18 @@
 
 .stackContainer {
   position: absolute;
-  top: 45%;
+  top: 30%;
   left: 5%;
   width: 23%;
   justify-content: center;
   height: auto;
   z-index: 1;
+}
+
+.line {
+  width: 1px;
+  height: 100%;
+  background: #fff;
+  margin: 0;
+  padding: 0;
 }
