--- a/src/Components/Modals/modal.module.css
+++ b/src/Components/Modals/modal.module.css
@@ -18,9 +18,12 @@
   background: linear-gradient(0deg, #181818, transparent 50%);
 }
 .modalContainer {
-  padding: 10px 10px 20px 20px;
+  margin-left: 40px;
+  margin-top: 40px;
+  margin-right: 40px;
   align-items: center;
   gap: 4px;
+  flex-direction: row;
 }
 
 .stackContainer {
@@ -39,4 +42,10 @@
   background: #fff;
   margin: 0;
   padding: 0;
+}
+
+.seeMoreMovie{
+  margin-left: 40px;
+  margin-top: 40px;
+  margin-right: 40px;
 }
