--- a/src/Components/Modals/modal.module.css
+++ b/src/Components/Modals/modal.module.css
@@ -21,6 +21,7 @@
   margin-left: 40px;
   margin-top: 40px;
   margin-right: 40px;
+  margin-bottom: 20px;
   align-items: center;
   gap: 4px;
   flex-direction: row;
