improve css style for the landing page

--- a/src/Components/Carousel/carousel.module.css
+++ b/src/Components/Carousel/carousel.module.css
@@ -4,3 +4,20 @@
   border-style: none;
   margin-top: 10px;
 }
+
+.fadeInContainer {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 150ms;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
