--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -14,7 +14,7 @@
 
 .stackContainer {
   position: absolute;
-  top: 30%;
+  top: 48%;
   left: 5%;
   width: 23%;
   justify-content: center;
@@ -47,7 +47,7 @@
   height: 100% !important;
   opacity: 1;
   overflow: hidden;
-  background: linear-gradient(0deg, #181818, transparent 50%)
+  background: linear-gradient(0deg, #181818, transparent 50%), linear-gradient(-90deg, #181818, transparent 50%), linear-gradient(90deg, #181818, transparent 50%);
 }
 
 .fadeInContainer {
