--- a/src/Components/Modals/modal.module.css
+++ b/src/Components/Modals/modal.module.css
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100%;
   opacity: 1;
+  z-index: 1;
   overflow: hidden;
   background: linear-gradient(0deg, #181818, transparent 50%);
 }
