--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -31,13 +31,11 @@
   left: 0;
   width: 100%;
   height: 100% !important;
-  opacity: 1;
   overflow: hidden;
   background: linear-gradient(0deg, #181818, transparent 50%);
 }
 
 .fadeInContainer {
-	opacity: 1;
 	animation-name: fadeInOpacity;
 	animation-iteration-count: 1;
 	animation-timing-function: ease-in;
@@ -53,7 +51,21 @@
 	}
 }
 
+@keyframes fadeOutOpacity {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .currentLanding {
   animation: fadeInOpacity 0.5s ease-in;
+  animation-duration: 1500ms;
+}
+
+.notCurrentLanding {
+  animation: fadeOutOpacity 0.5s ease-out;
   animation-duration: 300ms;
 }
