--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -102,3 +102,15 @@
   border: 2px solid #181818;
   color: #333;
 }
+
+.btnStyle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
+  z-index: 10;
+  color: #333;
+  padding: 0.8rem;
+}
