home page mobile finished but maybe some things gonna change in the avenir

--- a/src/Components/Landingvideo/LandingVideo.module.css
+++ b/src/Components/Landingvideo/LandingVideo.module.css
@@ -16,9 +16,9 @@
 
 .stackContainer {
   position: absolute;
-  top: 60%;
   left: 5%;
   width: 23%;
+  max-width: 100%;
   justify-content: center;
   height: auto;
   z-index: 1;
