--- a/src/views/GlobalStyle.module.css
+++ b/src/views/GlobalStyle.module.css
@@ -1,6 +1,26 @@
 body {
   background-color: #181818 !important;
   scroll-behavior: auto;
+  font-size: 1.1rem !important;
+  font-size: clamp(1.1rem, 0.9333333333333335rem + 0.4629629629629629vw , 1.6rem) !important;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-feature-settings: "liga" on, "kern" on, "calt" on;
+  -webkit-font-feature-settings: "liga" on, "kern" on, "calt" on;
+  -moz-font-feature-settings: "liga" on, "kern" on, "calt" on;
+  -ms-font-feature-settings: "liga" on, "kern" on, "calt" on;
+  -o-font-feature-settings: "liga" on, "kern" on, "calt" on;
 }
 
 .swiperContainer {
